--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
+  "name": "tas-1",
+  "version": "1.0.0",
   "dependencies": {
     "@tailwindcss/cli": "^4.0.0",
     "tailwindcss": "^4.0.0"
+  },
+  "scripts": {
+    "start": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch"
   }
 }
